style: fix responsive

--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
           <img src="/assets/img/github-icon.png" alt="Github icon">
         </a>
       </nav>
-      <div class="footer__data">
-        <p>Gustavo Almeida</p>
-        <p>Vinicius Bispo</p>
-        <p>Marina Gomes</p>
-        <p>Layout criado para fins de estudos na escola vai na web</p>
-      </div>
+      <ul class="footer__data">
+        <li>Gustavo Almeida</li>
+        <li>Vinicius Bispo</li>
+        <li>Marina Gomes</li>
+        <li>Layout criado para fins de estudos na escola vai na web</li>
+      </ul>
       <figure class="footer__figure">
         <img src="/assets/img/laco-rosa.png" alt="Laço rosa do outubro rosa">
       </figure>
